--- a/TestGrid/TestGrid/TestGrid.csproj
+++ b/TestGrid/TestGrid/TestGrid.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +93,7 @@
     <None Include="Resources\Empty.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Label1.png" />
     <None Include="Resources\Selected.png" />
   </ItemGroup>
   <ItemGroup>
@@ -126,6 +128,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LeftTop21.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Label2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
