--- a/TestGrid/TestGrid/TestGrid.csproj
+++ b/TestGrid/TestGrid/TestGrid.csproj
@@ -71,6 +71,12 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="dbconnection.cs" />
+    <Compile Include="frmPlayerNames.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPlayerNames.Designer.cs">
+      <DependentUpon>frmPlayerNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmPlayerNames.resx">
+      <DependentUpon>frmPlayerNames.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
